// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe mostrar el componente con imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="coffee mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage debe mostrar el componente sin imagen 1`] = `
<img
  alt="coffee mug"
  className="productImg undefined"
  src="https:hola.jpg"
/>
`;
